# flow-cytometry-analyzer

./: .gitignore  .readthedocs.yml  BUILD.md  README.md  build-universal.sh  build.sh  clean.sh  debug.sh  flow_cytometry_analyzer.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run.sh  vite.config.js
.github/workflows/: build-simple.yml  build.yml  docs.yml
docs/: DEPLOYMENT.md  README.md  building.md  index.md  installation.md  requirements.txt  troubleshooting.md  usage.md
sample_data/: 10-11-2023_AUTOF_001.fcs
src/: cyto_data.py  filter_cyto_data.py  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  fcs.rs  main.rs
src/flow_cytometry_analyzer/: __main__.py  cyto_data.py  filter_cyto_data.py
