[package]
name = "flow-cytometry-analyzer"
version = "0.1.0"
description = "Rodrigolab's Flow Cytometry Analyzer - Filter your flow cytometry files by manual selection on some channels"
authors = ["Lucas Goiriz <lucas.goiriz@csic.es>"]
license = "MIT"
repository = "https://github.com/luksgrin/flow-cytometry-analyzer"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.40", features = ["lazy", "csv", "parquet"] }
rust_xlsxwriter = "0.75"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

